# heera-kwin-plugins

./: CMakeLists.txt  README.md
config/: kwinrc
plugins/decoration/: CMakeLists.txt  button.cpp  decoration.cpp  decoration.h  heeradecor.json
scripts/heera_squash/: metadata.desktop  metadata.json
scripts/heeralauncher/: metadata.desktop
scripts/heeralauncher/contents/: main.js
tabbox/heera_thumbnail/: metadata.desktop
tabbox/heera_thumbnail/contents/ui/: main.qml
